[package]
name = "google-reader"
version = "0.0.2"
edition = "2021"
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>"
]
repository = "https://github.com/yaleman/google-reader-rs"
homepage = "https://github.com/yaleman/google-reader-rs"
license = "MPL-2.0"
description = "A Rust library for interacting with Google Reader"
keywords = [
    "reader",
    "api",
    "rss",
    "freshrss",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = "0.4.17"
regex = "1.8.1"
reqwest = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
url = "2.3.1"

[dev-dependencies]
flexi_logger = "0.29.0"
tokio = { version = "1.28.0", features = ["macros", "rt"] }
