[package]
name = "google-reader"
version = "0.0.3"
edition = "2021"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
repository = "https://github.com/yaleman/google-reader-rs"
homepage = "https://github.com/yaleman/google-reader-rs"
license = "MPL-2.0"
description = "A Rust library for interacting with Google Reader"
keywords = ["reader", "api", "rss", "freshrss"]

[dependencies]
anyhow = "1.0.102"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["rustls", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"

[dev-dependencies]
flexi_logger = "0.31.8"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
